[tool.poetry]
name = "learning_torch"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
pandas = "^1.3.5"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
